package experimot.msgs;

/// \ingroup experimot_msgs
/// \interface Motion description 
/// \brief Information about all motions supported by the gesture/motion recognition module

import "request.proto";
import "response.proto";
import "param.proto";

message BehaviorArguments{
	required string name = 1;
	required string value = 2;
	required bool place_holder = 3;
	required string type = 4;
}

message BehaviorDescription
{
	enum ExecutionType
	{
		Blocking = 0;
		NonBlocking = 1;
	}
	enum ExecutionState
    {
        Idle = 0;
        Running = 1;
        Error = 2;
    }
	required string name = 1;
	required string function_name = 2;
	repeated BehaviorArguments arg = 3;
	required ExecutionType type = 4;
	required ExecutionState state = 5;
}

message RobotBehaviorModule
{
  message RobotBehaviorResponder
  {
	required string Host = 1;
	required int32 Port = 2;
  }
  required string name  = 1;
  repeated Param param = 2;
  repeated BehaviorDescription behaviors = 3;
  optional RobotBehaviorResponder responder = 4;
}

message RobotBehaviorModules
{
  repeated RobotBehaviorModule modules  = 1;
}